--- a/debian/control
+++ b/debian/control
@@ -6,10 +6,13 @@ Uploaders: Eugenio Paolantonio (g7) <eugenio@droidian.org>,
            r3vn <giuseppe@droidian.org>,
            Erfan Abdi <erfan@droidian.org>,
            Erik Inkinen <erik@droidian.org>,
+           Bardia Moshiri <fakeshell@bardia.tech>,
+XS-Droidian-Host-Arch: arm64
+XS-Droidian-Build-On: amd64
 Build-Depends: build-essential,
                dpkg-dev,
                findutils,
-               python2,
+               android-platform-prebuilts-python-linux-x86-2.7.5,
                debhelper (>= 13),
                bc,
                rsync,
@@ -24,10 +27,10 @@ Build-Depends: build-essential,
                mkbootimg (>= 10.0.0),
                mkdtboimg,
                avbtool,
-               linux-initramfs-halium-generic:arm64, binutils-aarch64-linux-gnu, clang-android-10.0-r370808, gcc-4.9-aarch64-linux-android, g++-4.9-aarch64-linux-android, libgcc-4.9-dev-aarch64-linux-android-cross
+               linux-initramfs-halium-generic:arm64, binutils-aarch64-linux-gnu, clang-android-10.0-r370808, gcc-4.9-aarch64-linux-android, g++-4.9-aarch64-linux-android, libgcc-4.9-dev-aarch64-linux-android-cross, device-tree-compiler
 Standards-Version: 4.5.0.3
-Vcs-Browser: https://github.com/droidian/linux-android-oneplus-kebab
-Vcs-Git: https://github.com/droidian/linux-android-oneplus-kebab.git
+Vcs-Browser: https://github.com/droidian-devices/linux-android-oneplus-kebab
+Vcs-Git: https://github.com/droidian-devices/linux-android-oneplus-kebab.git
 
 Package: linux-image-4.19.110-oneplus-kebab
 Architecture: arm64
